<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.user.quizzapp.Quiz4">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/Header"
                android:text="@string/quiz4Header"
                />
            <TextView
                android:text="@string/quiz4"
                style="@style/Questions"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        style="@style/MultipleChoice"
                        android:text="@string/quiz4_1"
                        />
                    <RadioButton
                        style="@style/MultipleChoice"
                        android:text="@string/quiz4_2"
                        />
                    <RadioButton
                        style="@style/MultipleChoice"
                        android:text="@string/quiz4_3"
                        />
                    <RadioButton
                        style="@style/MultipleChoice"
                        android:text="@string/quiz4_4"
                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    style="@style/Button"
                    android:text="@string/nextButton"
                    android:onClick="nextQuiz"
                    />
                <Button
                    style="@style/Button"
                    android:text="@string/submitButon"
                    android:onClick="submitQuiz"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
